# agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml  run.py
configs/: default.yaml  development.yaml
docs/: uv_guide.md
examples/: basic_usage.py  run_simple.py  run_tui.py
src/agent/core/: __init__.py  agent.py  config.py  state.py
src/agent/llm/: __init__.py  base.py  deepseek.py
src/agent/modules/coordination/: __init__.py  multi_agent.py
src/agent/modules/memory/: __init__.py  long_term.py  short_term.py
src/agent/modules/reasoning/: __init__.py  planning.py  reflection.py
src/agent/tools/: __init__.py  base.py  file_tools.py  memory_tools.py
src/agent/ui/: __init__.py  tui.py
tests/: test_agent.py  test_config.py  test_llm.py  test_memory.py  test_state.py  test_tools.py
